[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "A FastAPI application"
authors = ["Govind <govindbairi142@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
yt-dlp = "^2024.9.1"
python-multipart = "^0.0.6"
# Add any other dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
